--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\ezraf\\.git\\IS403-Final-Project\\finalProj\\venv\\Scripts\\python.exe"
+    "python.pythonPath": "venv\\Scripts\\python.exe"
 }
